REGRESSION(r175251, Mavericks Only): Playback may stall https://bugs.webkit.org/show_bug.cgi?id=145989 <rdar://problem/21271919>

Reviewed by Dean Jackson.

Revert r175251 for Mavericks build targets.

* platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:
(WebCore::MediaPlayerPrivateAVFoundationObjC::createVideoLayer):
(WebCore::MediaPlayerPrivateAVFoundationObjC::createVideoOutput):
(WebCore::MediaPlayerPrivateAVFoundationObjC::paintWithVideoOutput):


Canonical link: https://commits.webkit.org/164029@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185569 268f45cc-cd09-0410-ab3c-d52691b4dbfc